[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Menu/MenuScripts/ButtonMenuContainer.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Stage" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
margin_left = -448.0
margin_top = -368.0
margin_right = 1592.0
margin_bottom = 1054.0
color = Color( 0.0117647, 0.65098, 0.933333, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 304 )
current = true

[node name="Center" type="CenterContainer" parent="."]
margin_left = -1.0
margin_top = 6.0
margin_right = 1244.0
margin_bottom = 632.0
rect_scale = Vector2( 0.823096, 0.953263 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="Center"]
pause_mode = 2
margin_left = 372.0
margin_top = 213.0
margin_right = 872.0
margin_bottom = 413.0
rect_min_size = Vector2( 500, 200 )
input_pass_on_modal_close_click = false
script = ExtResource( 1 )

[node name="confirmationDialog" type="ConfirmationDialog" parent="Center/ButtonContainer"]
margin_right = 500.0
margin_bottom = 70.0
dialog_text = "Restart the game manually to enable gles2 backend?"

[node name="backbtn" type="Button" parent="Center/ButtonContainer"]
margin_right = 500.0
margin_bottom = 50.0
rect_min_size = Vector2( 500, 50 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditsbtn" type="Button" parent="Center/ButtonContainer"]
margin_top = 54.0
margin_right = 500.0
margin_bottom = 104.0
rect_min_size = Vector2( 500, 50 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rendererbtn" type="CheckBox" parent="Center/ButtonContainer"]
margin_top = 108.0
margin_right = 500.0
margin_bottom = 158.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = SubResource( 3 )
text = " Set Gles2?"
align = 1

[connection signal="confirmed" from="Center/ButtonContainer/confirmationDialog" to="Center/ButtonContainer" method="_on_confirmationDialog_confirmed"]
[connection signal="popup_hide" from="Center/ButtonContainer/confirmationDialog" to="Center/ButtonContainer" method="_on_confirmationDialog_popup_hide"]
[connection signal="pressed" from="Center/ButtonContainer/backbtn" to="Center/ButtonContainer" method="_on_backbtn_pressed"]
[connection signal="pressed" from="Center/ButtonContainer/creditsbtn" to="Center/ButtonContainer" method="_on_creditsbtn_pressed"]
[connection signal="pressed" from="Center/ButtonContainer/rendererbtn" to="Center/ButtonContainer" method="_on_rendererbtn_pressed"]
